agregué el efecto de zoom a los proyectos

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
         /* Estilos para la sección de Pet Projects */
         .project-card {
-            @apply bg-slate-900/50 backdrop-blur-sm border border-slate-800 rounded-xl overflow-hidden shadow-lg transition-all duration-300 hover:border-sky-500 hover:shadow-sky-500/10 hover:-translate-y-2;
+            @apply bg-slate-900/50 backdrop-blur-sm border border-slate-800 rounded-xl overflow-hidden shadow-lg transition-all duration-300 hover:border-sky-500 hover:shadow-sky-500/10 hover:-translate-y-2 hover:scale-105;
         }
 
         .project-card .work-content {
@@ -441,7 +441,8 @@
                             <div class="mt-6 flex items-center">
                                 <div class="flex-shrink-0">
                                     <span class="sr-only">Alejandro G. Vera</span>
-                                    <i class="fas fa-user-circle fa-2x text-gray-500"></i>
+                                    <!-- Reemplaza 'images/tu-foto.jpg' con la ruta a tu foto de perfil -->
+                                    <img class="h-10 w-10 rounded-full object-cover" src="images/testimonial-2.jpg" alt="Foto de Alejandro G. Vera">
                                 </div>
                                 <div class="ml-3">
                                     <p class="text-sm font-medium text-white">
@@ -480,7 +481,8 @@
                             <div class="mt-6 flex items-center">
                                 <div class="flex-shrink-0">
                                     <span class="sr-only">Alejandro G. Vera</span>
-                                    <i class="fas fa-user-circle fa-2x text-gray-500"></i>
+                                     <!-- Reemplaza 'images/tu-foto.jpg' con la ruta a tu foto de perfil -->
+                                     <img class="h-10 w-10 rounded-full object-cover" src="images/testimonial-2.jpg" alt="Foto de Alejandro G. Vera">
                                 </div>
                                 <div class="ml-3">
                                     <p class="text-sm font-medium text-white">
@@ -517,7 +519,8 @@
                             <div class="mt-6 flex items-center">
                                 <div class="flex-shrink-0">
                                     <span class="sr-only">Alejandro G. Vera</span>
-                                    <i class="fas fa-user-circle fa-2x text-gray-500"></i>
+                                    <!-- Reemplaza 'images/tu-foto.jpg' con la ruta a tu foto de perfil -->
+                                    <img class="h-10 w-10 rounded-full object-cover" src="images/testimonial-2.jpg" alt="Foto de Alejandro G. Vera">
                                 </div>
                                 <div class="ml-3">
                                     <p class="text-sm font-medium text-white">
@@ -555,7 +558,8 @@
                             <div class="mt-6 flex items-center">
                                 <div class="flex-shrink-0">
                                     <span class="sr-only">Alejandro G. Vera</span>
-                                    <i class="fas fa-user-circle fa-2x text-gray-500"></i>
+                                    <!-- Reemplaza 'images/tu-foto.jpg' con la ruta a tu foto de perfil -->
+                                    <img class="h-10 w-10 rounded-full object-cover" src="images/testimonial-2.jpg" alt="Foto de Alejandro G. Vera">
                                 </div>
                                 <div class="ml-3">
                                     <p class="text-sm font-medium text-white">
@@ -594,7 +598,8 @@
                             <div class="mt-6 flex items-center">
                                 <div class="flex-shrink-0">
                                     <span class="sr-only">Alejandro G. Vera</span>
-                                    <i class="fas fa-user-circle fa-2x text-gray-500"></i>
+                                    <!-- Reemplaza 'images/tu-foto.jpg' con la ruta a tu foto de perfil -->
+                                    <img class="h-10 w-10 rounded-full object-cover" src="images/testimonial-2.jpg" alt="Foto de Alejandro G. Vera">
                                 </div>
                                 <div class="ml-3">
                                     <p class="text-sm font-medium text-white">
@@ -630,7 +635,8 @@
                             <div class="mt-6 flex items-center">
                                 <div class="flex-shrink-0">
                                     <span class="sr-only">Alejandro G. Vera</span>
-                                    <i class="fas fa-user-circle fa-2x text-gray-500"></i>
+                                    <!-- Reemplaza 'images/tu-foto.jpg' con la ruta a tu foto de perfil -->
+                                    <img class="h-10 w-10 rounded-full object-cover" src="images/testimonial-2.jpg" alt="Foto de Alejandro G. Vera">
                                 </div>
                                 <div class="ml-3">
                                     <p class="text-sm font-medium text-white">
@@ -851,13 +857,13 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
                     <!-- Project Card 1 -->
-                    <div class="project-card">
+                    <div class="bg-slate-900/50 backdrop-blur-sm border border-slate-800 rounded-xl overflow-hidden shadow-lg transition-all duration-300 hover:border-sky-500 hover:shadow-sky-500/10 hover:-translate-y-2 hover:scale-105">
                         <a href="https://github.com/AlexielArdilla/ProyectoRecruiter2050" target="_blank">
                             <div class="work-img overflow-hidden">
                                 <img src="images/work-1.jpg"
-                                    alt="Imagen del proyecto Recruiter 2050" class="w-full h-auto">
+                                    alt="Imagen del proyecto Recruiter 2050" class="w-full h-auto transition-transform duration-500 transform hover:scale-110">
                             </div>
-                            <div class="work-content">
+                            <div class="p-6">
                                 <div class="flex justify-between items-center">
                                     <div>
                                         <h3 class="text-2xl font-bold text-white">Recruiter 2050</h3>
@@ -874,13 +880,13 @@
                     </div>
 
                     <!-- Project Card 2 -->
-                    <div class="project-card">
+                    <div class="bg-slate-900/50 backdrop-blur-sm border border-slate-800 rounded-xl overflow-hidden shadow-lg transition-all duration-300 hover:border-sky-500 hover:shadow-sky-500/10 hover:-translate-y-2 hover:scale-105">
                         <a href="https://github.com/AlexielArdilla/Gestor-Web-Aerolineas-UNPAZ" target="_blank">
                             <div class="work-img overflow-hidden">
                                 <img src="images/work-2.jpg"
-                                    alt="Imagen del proyecto Aerolineas UNPAZ" class="w-full h-auto">
+                                    alt="Imagen del proyecto Aerolineas UNPAZ" class="w-full h-auto transition-transform duration-500 transform hover:scale-110">
                             </div>
-                            <div class="work-content">
+                            <div class="p-6">
                                 <div class="flex justify-between items-center">
                                     <div>
                                         <h3 class="text-2xl font-bold text-white">Aerolineas UNPAZ</h3>
@@ -897,14 +903,14 @@
                     </div>
 
                     <!-- Project Card 3 -->
-                    <div class="project-card">
+                    <div class="bg-slate-900/50 backdrop-blur-sm border border-slate-800 rounded-xl overflow-hidden shadow-lg transition-all duration-300 hover:border-sky-500 hover:shadow-sky-500/10 hover:-translate-y-2 hover:scale-105">
                         <a href="https://github.com/AlexielArdilla/ABM-Alumnos-con-seleccion-de-avatares"
                             target="_blank">
                             <div class="work-img overflow-hidden">
                                 <img src="images/work-3.jpg"
-                                    alt="Imagen del proyecto ABM Alumnos" class="w-full h-auto">
+                                    alt="Imagen del proyecto ABM Alumnos" class="w-full h-auto transition-transform duration-500 transform hover:scale-110">
                             </div>
-                            <div class="work-content">
+                            <div class="p-6">
                                 <div class="flex justify-between items-center">
                                     <div>
                                         <h3 class="text-2xl font-bold text-white">ABM Alumnos</h3>
@@ -921,13 +927,13 @@
                     </div>
 
                     <!-- Project Card 4 -->
-                    <div class="project-card">
+                    <div class="bg-slate-900/50 backdrop-blur-sm border border-slate-800 rounded-xl overflow-hidden shadow-lg transition-all duration-300 hover:border-sky-500 hover:shadow-sky-500/10 hover:-translate-y-2 hover:scale-105">
                         <a href="https://github.com/AlexielArdilla/Preatendedor_pgsql" target="_blank">
                             <div class="work-img overflow-hidden">
                                 <img src="images/work-4.jpg"
-                                    alt="Imagen del proyecto Preatendedor" class="w-full h-auto">
+                                    alt="Imagen del proyecto Preatendedor" class="w-full h-auto transition-transform duration-500 transform hover:scale-110">
                             </div>
-                            <div class="work-content">
+                            <div class="p-6">
                                 <div class="flex justify-between items-center">
                                     <div>
                                         <h3 class="text-2xl font-bold text-white">Preatendedor</h3>
@@ -944,13 +950,13 @@
                     </div>
 
                     <!-- Project Card 5 -->
-                    <div class="project-card">
+                    <div class="bg-slate-900/50 backdrop-blur-sm border border-slate-800 rounded-xl overflow-hidden shadow-lg transition-all duration-300 hover:border-sky-500 hover:shadow-sky-500/10 hover:-translate-y-2 hover:scale-105">
                         <a href="https://github.com/AlexielArdilla/GestionDePreatendidos_postgresql" target="_blank">
                             <div class="work-img overflow-hidden">
                                 <img src="images/work-5.jpg"
-                                    alt="Imagen del proyecto Gestor Preatendedor" class="w-full h-auto">
+                                    alt="Imagen del proyecto Gestor Preatendedor" class="w-full h-auto transition-transform duration-500 transform hover:scale-110">
                             </div>
-                            <div class="work-content">
+                            <div class="p-6">
                                 <div class="flex justify-between items-center">
                                     <div>
                                         <h3 class="text-2xl font-bold text-white">Gestor Preatendedor</h3>
@@ -967,14 +973,14 @@
                     </div>
 
                     <!-- Project Card 6 -->
-                    <div class="project-card">
+                    <div class="bg-slate-900/50 backdrop-blur-sm border border-slate-800 rounded-xl overflow-hidden shadow-lg transition-all duration-300 hover:border-sky-500 hover:shadow-sky-500/10 hover:-translate-y-2 hover:scale-105">
                         <a href="https://github.com/AlexielArdilla/Proyecto-Horarios-y-Desktop-App-Java-Web"
                             target="_blank">
                             <div class="work-img overflow-hidden">
                                 <img src="images/work-6.jpg"
-                                    alt="Imagen del proyecto Horarios UNPAZ" class="w-full h-auto">
+                                    alt="Imagen del proyecto Horarios UNPAZ" class="w-full h-auto transition-transform duration-500 transform hover:scale-110">
                             </div>
-                            <div class="work-content">
+                            <div class="p-6">
                                 <div class="flex justify-between items-center">
                                     <div>
                                         <h3 class="text-2xl font-bold text-white">Horarios UNPAZ</h3>
