--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                                     <p class="text-xl font-semibold text-white">Experto Universitario en Ethical Hacking
                                     </p>
                                     <p class="mt-3 text-base text-gray-400">Aprendizaje profundo de técnicas avanzadas
-                                        de Hacking Éico blue y red team.</p>
+                                        de Hacking Ético blue y red team.</p>
                                 </a>
                             </div>
                             <div class="mt-6 flex items-center">
