--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                                     <p class="text-xl font-semibold text-white">CIBERSEGURIDAD Y SEGURIDAD DE LA
                                         INFORMACIÓN</p>
                                     <p class="mt-3 text-base text-gray-400">Técnicas y herramientas para la gestión del
-                                        acceso y la monitorización a nivel empresarial redes
+                                        acceso y la monitorización a nivel profesional redes
                                         empresariales.</p>
                                 </a>
                             </div>
