Cambié los libros por otros más profesionales

--- a/index.html
+++ b/index.html
@@ -1176,11 +1176,11 @@
                     </div>
                     <!-- Book Card 4 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/1pD1DUa" target="_blank"><img
-                                src="images/004- Dominando THC Hydra en Kali Linux PORTADA.jpg"
-                                alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
+                        <a href="https://a.co/d/8KSvB6X" target="_blank"><img
+                                src="images/004-la_biblia_negra_E_H.jpg"
+                                alt="Portada del libro La bilbia negra" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
-                            <h4 class="font-bold text-white text-lg">THC Hydra</h4>
+                            <h4 class="font-bold text-white text-lg">La biblia negra del Ethical Hacking</h4>
                             <p class="text-sm text-gray-400 mt-1">Ethical Hacking Tool</p>
                         </div>
                     </div>
@@ -1195,43 +1195,43 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     <!-- Book Card 5 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/8l4eFSw" target="_blank"><img
-                                src="images/005- John The Ripper_ Guía Completa.jpg"
-                                alt="Portada del libro Manual de Linux" class="w-full h-auto object-cover"></a>
+                        <a href="https://a.co/d/cE2ui9B" target="_blank"><img
+                                src="images/005-metasploit_al_desnudo.jpg"
+                                alt="Portada del libro 005-metasploit_al_desnudo" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
-                            <h4 class="font-bold text-white text-lg">John the ripper</h4>
-                            <p class="text-sm text-gray-400 mt-1">Password cracker/manual</p>
+                            <h4 class="font-bold text-white text-lg">Metasplit al desnudo</h4>
+                            <p class="text-sm text-gray-400 mt-1">Framework</p>
                         </div>
                     </div>
                     <!-- Book Card 6 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/0VonGRS" target="_blank"><img
-                                src="images/006- Manual de Linux completo A G V.jpg"
-                                alt="Portada del Libro Textos herméticos" class="w-full h-auto object-cover"></a>
+                        <a href="https://a.co/d/9kYWuMO" target="_blank"><img
+                                src="images/006-Ethical_hacking_con_Python.jpg"
+                                alt="Portada del 006-Ethical_hacking_con_Python" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
-                            <h4 class="font-bold text-white text-lg">Manual de Linux completo</h4>
-                            <p class="text-sm text-gray-400 mt-1">Sis. Operativo</p>
+                            <h4 class="font-bold text-white text-lg">Ethical hacking con Python</h4>
+                            <p class="text-sm text-gray-400 mt-1">Lenguaje de programación</p>
                         </div>
                     </div>
                     <!-- Book Card 7 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/8k2Ho2k" target="_blank"><img
-                                src="images/007- Metasploit Manual_Alejandro G Vera.jpg"
-                                alt="Portada del libro Guía integral de Ethical hacking"
+                        <a href="https://a.co/d/gcPT6D1" target="_blank"><img
+                                src="images/007-hard_hatter.jpg"
+                                alt="Portada del libro 007-hard_hatter"
                                 class="w-full h-auto object-cover"></a>
                         <div class="p-6">
-                            <h4 class="font-bold text-white text-lg">Metasploit</h4>
-                            <p class="text-sm text-gray-400 mt-1">Ethical Hacking / Framework</p>
+                            <h4 class="font-bold text-white text-lg">Hard Hatter</h4>
+                            <p class="text-sm text-gray-400 mt-1">Ethical Hacking - técnico</p>
                         </div>
                     </div>
                     <!-- Book Card 8 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/2hRDfom" target="_blank"><img
-                                src="images/008- theHarvester_ Uso Avanzado en Kali.jpg"
-                                alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
+                        <a href="https://a.co/d/j8Slm3E" target="_blank"><img
+                                src="images/008-corre_suricata.jpg"
+                                alt="Portada del libro 008-corre_suricata" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
-                            <h4 class="font-bold text-white text-lg">The harvester</h4>
-                            <p class="text-sm text-gray-400 mt-1">E. Hacking Tool / OSINT</p>
+                            <h4 class="font-bold text-white text-lg">Corre Suricata</h4>
+                            <p class="text-sm text-gray-400 mt-1">Blue team</p>
                         </div>
                     </div>
                 </div>
@@ -1245,42 +1245,42 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     <!-- Book Card 9 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/dFt5Z5F" target="_blank"><img
-                                src="images/009- Burnout en desarrollo de software Alejandro G Vera-PORTADA.jpg"
-                                alt="Portada del libro Manual de Linux" class="w-full h-auto object-cover"></a>
+                        <a href="https://a.co/d/env1MDM" target="_blank"><img
+                                src="images/009-la_biblia_de_NMAP.jpg"
+                                alt="Portada del libro la_biblia_de_NMAP" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
-                            <h4 class="font-bold text-white text-lg">Burnout en trabajos IT</h4>
-                            <p class="text-sm text-gray-400 mt-1">Informe</p>
+                            <h4 class="font-bold text-white text-lg">La biblia de NMAP</h4>
+                            <p class="text-sm text-gray-400 mt-1">Manual</p>
                         </div>
                     </div>
                     <!-- Book Card 10 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/5mU9XT6" target="_blank"><img
-                                src="images/010- Domina Microsoft Word (Guía No Oficial) - Alejandro G Vera-1_PORTADA.jpg"
-                                alt="Portada del Libro Textos herméticos" class="w-full h-auto object-cover"></a>
+                        <a href="https://a.co/d/ayT34a9" target="_blank"><img
+                                src="images/010-CEH_v13_entrenamiento.jpg"
+                                alt="Portada del Libro CEH_v13_entrenamiento" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
-                            <h4 class="font-bold text-white text-lg">Domina MS Word</h4>
-                            <p class="text-sm text-gray-400 mt-1">Ofimática</p>
+                            <h4 class="font-bold text-white text-lg">CEH.v13 Entrenamiento</h4>
+                            <p class="text-sm text-gray-400 mt-1">Manual</p>
                         </div>
                     </div>
                     <!-- Book Card 11 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/hklqSPy" target="_blank"><img
-                                src="images/011- Guía Exhaustiva de Formación en Java para Trainees Alejandro G Vera-1_PORTADA.jpg"
-                                alt="Portada del libro Guía integral de Ethical hacking"
+                        <a href="https://a.co/d/9VvKuqQ" target="_blank"><img
+                                src="images/011-NESSUS_a_full.jpg"
+                                alt="Portada del libro NESSUS_a_full"
                                 class="w-full h-auto object-cover"></a>
                         <div class="p-6">
-                            <h4 class="font-bold text-white text-lg">Guía de programación Java</h4>
+                            <h4 class="font-bold text-white text-lg">NESSUS a full</h4>
                             <p class="text-sm text-gray-400 mt-1">Curso</p>
                         </div>
                     </div>
                     <!-- Book Card 12 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/deiBWLJ" target="_blank"><img
-                                src="images/012- Guia HTML 5 CSS3 AGV-1_PORTADA.jpg"
-                                alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
+                        <a href="https://a.co/d/azhmIOi" target="_blank"><img
+                                src="images/012-Guia_detallada_freelancers.jpg"
+                                alt="Portada del libro Guía detallada entrenar LLM" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
-                            <h4 class="font-bold text-white text-lg">HTML5 CSS3</h4>
+                            <h4 class="font-bold text-white text-lg">Guía detallada entrenar LLM</h4>
                             <p class="text-sm text-gray-400 mt-1">Guía</p>
                         </div>
                     </div>
@@ -1294,42 +1294,42 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     <!-- Book Card 13 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/c7hhOvV" target="_blank"><img
-                                src="images/013- Guía Maestra de Python Con Portada A G V-1_PORTADA.jpg"
-                                alt="Portada del libro Manual de Linux" class="w-full h-auto object-cover"></a>
+                        <a href="https://a.co/d/gakyobl" target="_blank"><img
+                                src="images/013-como_entender_la_mente.jpg"
+                                alt="Portada del libro Cómo entender la mente de un Hacker" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
-                            <h4 class="font-bold text-white text-lg">Guía de Python</h4>
-                            <p class="text-sm text-gray-400 mt-1">Manual/curso</p>
+                            <h4 class="font-bold text-white text-lg">Cómo entender la mente de un Hacker</h4>
+                            <p class="text-sm text-gray-400 mt-1">Libro de texto</p>
                         </div>
                     </div>
                     <!-- Book Card 14 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/fMqNXmg" target="_blank"><img
-                                src="images/014- Java_ 100 Preguntas y Respuestas AGV-1_PORTADA.jpg"
-                                alt="Portada del Libro Textos herméticos" class="w-full h-auto object-cover"></a>
+                        <a href="https://a.co/d/7fOX4Sh" target="_blank"><img
+                                src="images/014- John The Ripper_ Guía Completa.jpg"
+                                alt="Portada del Libro John_The_Ripper" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
-                            <h4 class="font-bold text-white text-lg">Java 100 preguntas</h4>
+                            <h4 class="font-bold text-white text-lg">John the Ripper guía completa</h4>
                             <p class="text-sm text-gray-400 mt-1">Manual/curso</p>
                         </div>
                     </div>
                     <!-- Book Card 15 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/5dwnZ8y" target="_blank"><img
-                                src="images/015- Patrones de Arquitectura de Software en Java - Una Guía Práctica A G V-1_PORTADA.jpg"
-                                alt="Portada del libro Guía integral de Ethical hacking"
+                        <a href="https://a.co/d/1p13PyI" target="_blank"><img
+                                src="images/015-la_biblia_negra_ing_social.jpg"
+                                alt="Portada del libro La biblia negra de la ingeniería social"
                                 class="w-full h-auto object-cover"></a>
                         <div class="p-6">
-                            <h4 class="font-bold text-white text-lg">Patrones de arquitectura java</h4>
+                            <h4 class="font-bold text-white text-lg">La biblia negra de la ingeniería social</h4>
                             <p class="text-sm text-gray-400 mt-1">Manual/curso</p>
                         </div>
                     </div>
                     <!-- Book Card 16 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/7uZJS05" target="_blank"><img
-                                src="images/016- Ubuntu - Un Análisis Exhaustivo de un Sistema Operativo de Código Abierto de Primera Línea A G V-1_PORTADA.jpg"
-                                alt="Portada del libro El arte de la palabra" class="w-full h-auto object-cover"></a>
+                        <a href="https://a.co/d/1Kej4Ep" target="_blank"><img
+                                src="images/016-por_que_van_presos.jpg"
+                                alt="Portada del libro Por qué van presos los Hackers" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
-                            <h4 class="font-bold text-white text-lg">Ubuntu</h4>
+                            <h4 class="font-bold text-white text-lg">Por qué van presos los Hackers</h4>
                             <p class="text-sm text-gray-400 mt-1">Manual/Guía</p>
                         </div>
                     </div>
