corregí un typo

--- a/index.html
+++ b/index.html
@@ -1199,7 +1199,7 @@
                                 src="images/005-metasploit_al_desnudo.jpg"
                                 alt="Portada del libro 005-metasploit_al_desnudo" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
-                            <h4 class="font-bold text-white text-lg">Metasplit al desnudo</h4>
+                            <h4 class="font-bold text-white text-lg">Metasploit al desnudo</h4>
                             <p class="text-sm text-gray-400 mt-1">Framework</p>
                         </div>
                     </div>
