corregi min edu por UTN

--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                         <div class="flex-1 p-6 flex flex-col justify-between">
                             <div class="flex-1">
                                 <p class="text-sm font-medium text-sky-400">
-                                    Min. de Producción
+                                    UTN
                                 </p>
                                 <a href="images/Cert6_Python intermedio UTN_page-0001.jpg" class="block mt-2">
                                     <p class="text-xl font-semibold text-white">Python 3 - Intermedio</p>
